feat: High-performance rewrite with cardinality protection & observability (#12)
* feat: High-performance rewrite with cardinality protection, self-observability & JMH benchmarks

- Rewrite appender to extract data directly from event objects (no JSON round-tripping)
- Add CacheKey record for zero-allocation hot-path lookups
- Add circuit breaker flags for counter/histogram saturation
- Add runtime cardinality protection with auto-blacklisting of high-cardinality tags
- Add self-observability metrics (timers, counters, gauges) with toggle flag
- Add JMH benchmark suite with realistic 20-event workload (55M+ ops/s hot path)
- Add benchmark CI workflow with GitHub Pages dashboard (benchmark-action)
- Extract StructuredArguments and LogstashMarkers directly (no encoder needed)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* docs: Add enableSelfObservability flag to README configuration

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* test: Add integration tests for MDC, LogstashMarkers, blacklist, counter-only, mixed sources, self-observability

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: Fix flaky testSelfMetricsRegistered — check appender fields instead of global registry gauges

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Dor Amid <dor.amid@taboola.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>